--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lin-kernighan",
   "version": "1.0.0",
   "description": "Adaptive k-opt heuristic improving TSP tours by swapping edges to shorten routes.",
-  "main": "dist/cjs/index.js",
+  "main": "./dist/cjs/index.js",
   "files": [
     "dist"
   ],
@@ -26,9 +26,19 @@
   },
   "homepage": "https://github.com/bredele/lin-kernighan#readme",
   "devDependencies": {
+    "@types/node": "^24.0.3",
     "cmplr": "^1.1.0"
   },
   "dependencies": {
     "haversine-matrix": "^1.0.1"
+  },
+  "module": "./dist/esm/index.js",
+  "types": "./dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js",
+      "types": "./dist/types/index.d.ts"
+    }
   }
 }
